[package]
name = "lab_honeycomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
opentelemetry = {version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = {version = "0.10.0", features = ["tonic", "tls", "tls-roots"]}
serde_json = "1.0.81"
tokio = "1.18.2"
tonic = "0.6"
url = "2.2.2"
