[package]
name = "lab_honeycomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tracing = "0.1.19"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = {version = "0.10.0", features = ["tonic", "tls", "tls-roots"]}
tracing-opentelemetry = { version = "0.17" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = {version = "0.5.1", features = ["opentelemetry_0_17"]}
tonic = "0.6"
url = "2.2.2"
dotenv = "0.15.0"
